[package]
name = "fqnovel-api"
version = "0.1.0"
edition = "2021"
authors = [ "jec9ues <139811380+jec9ues@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.4" }
worker-macros = { version="0.3.4" }
console_error_panic_hook = { version = "0.1.1" }

anyhow = "1.0.86"

libaes = "0.7.0"
rand = "0.9.0-alpha.2"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
flate2 = "1.0"

#tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }